--- a/portfolio.html
+++ b/portfolio.html
@@ -15,38 +15,44 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <!--HEADER-->
 
-    <header class="header">
-      <div class="container">
+    <header class="page-header">
+      <div class="container container--nav">
         <nav class="nav">
-          <a class="head-logo" href="./index.html"> <span>Web</span>Studio</a>
-          <ul class="nav-list list">
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html">Студия</a>
+          <a class="logo logo--black" href="./index.html">
+            <span class="logo__text">Web</span>Studio</a
+          >
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link" href="./index.html">Студия</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="./portfolio.html">Портфолио</a>
+            <li class="nav__item">
+              <a class="nav__link nav__link--active" href="./portfolio.html"
+                >Портфолио</a
+              >
             </li>
-            <li class="nav-item"><a class="nav-link" href="">Контакты</a></li>
+            <li class="nav__item">
+              <a class="nav__link" href="">Контакты</a>
+            </li>
           </ul>
         </nav>
 
-        <ul class="contacts list">
-          <li class="contact-item">
-            <a class="contacts-link" href="mailto:info@devstudio.com">
-              <svg class="contact-icon" width="16" height="12">
+        <ul class="contacts__list">
+          <li class="contacts__item">
+            <a class="contacts__link" href="mailto:info@devstudio.com">
+              <svg class="contacts__icon" width="16" height="12">
                 <use href="./img/sprite.svg#icon-mail"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="contact-item">
-            <a class="contacts-link" href="tel:+380961111111">
-              <svg class="contact-icon" width="10" height="16">
+          <li class="contacts__item">
+            <a class="contacts__link" href="tel:+380961111111">
+              <svg class="contacts__icon smartphone" width="10" height="16">
                 <use href="./img/sprite.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -57,29 +63,29 @@
     </header>
     <!-- MAIN-->
     <main>
-      <section>
-        <div class="exampl container">
+      <section class="examples">
+        <div class="container">
           <h1 class="visually-hidden">examples</h1>
-          <ul class="buttons-list list">
-            <li class="buttons-item">
+          <ul class="buttons__list">
+            <li class="buttons__item">
               <button class="button" type="button">Все</button>
             </li>
-            <li class="buttons-item">
+            <li class="buttons__item">
               <button class="button" type="button">Веб-сайты</button>
             </li>
-            <li class="buttons-item">
+            <li class="buttons__item">
               <button class="button" type="button">Приложения</button>
             </li>
-            <li class="buttons-item">
+            <li class="buttons__item">
               <button class="button" type="button">Дизайн</button>
             </li>
-            <li class="buttons-item">
+            <li class="buttons__item">
               <button class="button" type="button">Маркетинг</button>
             </li>
           </ul>
-          <ul class="examples list">
-            <li class="exampl-el">
-              <a class="example-link" href="#">
+          <ul class="examples__list">
+            <li class="examples__element">
+              <a class="example__link" href="#">
                 <div class="thumb">
                   <img
                     class="no-gap"
@@ -88,7 +94,7 @@
                     width="370"
                   />
                   <div class="overlay">
-                    <p class="overlay-text">
+                    <p class="overlay__text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые сервера
@@ -97,14 +103,14 @@
                   </div>
                 </div>
 
-                <div class="card-text">
-                  <h2 class="examples-title">Технокряк</h2>
-                  <p class="examples-text">Веб-сайт</p>
+                <div class="example__text">
+                  <h2 class="example__title">Технокряк</h2>
+                  <p class="example__type">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="exampl-el">
-              <a class="example-link" href="">
+            <li class="examples__element">
+              <a class="example__link" href="">
                 <div class="thumb">
                   <img
                     class="no-gap"
@@ -113,7 +119,7 @@
                     width="370"
                   />
                   <div class="overlay">
-                    <p class="overlay-text">
+                    <p class="overlay__text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые сервера
@@ -121,16 +127,16 @@
                     </p>
                   </div>
                 </div>
-                <div class="card-text">
-                  <h2 class="examples-title">
+                <div class="example__text">
+                  <h2 class="example__title">
                     Постер New Orlean vs Golden Star
                   </h2>
-                  <p class="examples-text">Дизайн</p>
+                  <p class="example__type">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="exampl-el">
-              <a class="example-link" href="#">
+            <li class="examples__element">
+              <a class="example__link" href="#">
                 <div class="thumb">
                   <img
                     class="no-gap"
@@ -139,7 +145,7 @@
                     width="370"
                   />
                   <div class="overlay">
-                    <p class="overlay-text">
+                    <p class="overlay__text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые сервера
@@ -147,14 +153,14 @@
                     </p>
                   </div>
                 </div>
-                <div class="card-text">
-                  <h2 class="examples-title">Ресторан Seafood</h2>
-                  <p class="examples-text">Приложение</p>
+                <div class="example__text">
+                  <h2 class="example__title">Ресторан Seafood</h2>
+                  <p class="example__type">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="exampl-el">
-              <a class="example-link" href="#">
+            <li class="examples__element">
+              <a class="example__link" href="#">
                 <div class="thumb">
                   <img
                     class="no-gap"
@@ -163,7 +169,7 @@
                     width="370"
                   />
                   <div class="overlay">
-                    <p class="overlay-text">
+                    <p class="overlay__text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые сервера
@@ -171,14 +177,14 @@
                     </p>
                   </div>
                 </div>
-                <div class="card-text">
-                  <h2 class="examples-title">Проект Prime</h2>
-                  <p class="examples-text">Маркетинг</p>
+                <div class="example__text">
+                  <h2 class="example__title">Проект Prime</h2>
+                  <p class="example__type">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="exampl-el">
-              <a class="example-link" href="#">
+            <li class="examples__element">
+              <a class="example__link" href="#">
                 <div class="thumb">
                   <img
                     class="no-gap"
@@ -187,7 +193,7 @@
                     width="370"
                   />
                   <div class="overlay">
-                    <p class="overlay-text">
+                    <p class="overlay__text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые сервера
@@ -195,14 +201,14 @@
                     </p>
                   </div>
                 </div>
-                <div class="card-text">
-                  <h2 class="examples-title">Проект Boxes</h2>
-                  <p class="examples-text">Приложение</p>
+                <div class="example__text">
+                  <h2 class="example__title">Проект Boxes</h2>
+                  <p class="example__type">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="exampl-el">
-              <a class="example-link" href="#">
+            <li class="examples__element">
+              <a class="example__link" href="#">
                 <div class="thumb">
                   <img
                     class="no-gap"
@@ -211,7 +217,7 @@
                     width="370"
                   />
                   <div class="overlay">
-                    <p class="overlay-text">
+                    <p class="overlay__text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые сервера
@@ -219,14 +225,14 @@
                     </p>
                   </div>
                 </div>
-                <div class="card-text">
-                  <h2 class="examples-title">Inspiration has no Borders</h2>
-                  <p class="examples-text">Веб-сайт</p>
+                <div class="example__text">
+                  <h2 class="example__title">Inspiration has no Borders</h2>
+                  <p class="example__type">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="exampl-el">
-              <a class="example-link" href="#">
+            <li class="examples__element">
+              <a class="example__link" href="#">
                 <div class="thumb">
                   <img
                     class="no-gap"
@@ -235,7 +241,7 @@
                     width="370"
                   />
                   <div class="overlay">
-                    <p class="overlay-text">
+                    <p class="overlay__text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые сервера
@@ -243,14 +249,14 @@
                     </p>
                   </div>
                 </div>
-                <div class="card-text">
-                  <h2 class="examples-title">Издание Limited Edition</h2>
-                  <p class="examples-text">Дизайн</p>
+                <div class="example__text">
+                  <h2 class="example__title">Издание Limited Edition</h2>
+                  <p class="example__type">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="exampl-el">
-              <a class="example-link" href="#">
+            <li class="examples__element">
+              <a class="example__link" href="#">
                 <div class="thumb">
                   <img
                     class="no-gap"
@@ -259,7 +265,7 @@
                     width="370"
                   />
                   <div class="overlay">
-                    <p class="overlay-text">
+                    <p class="overlay__text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые сервера
@@ -267,14 +273,14 @@
                     </p>
                   </div>
                 </div>
-                <div class="card-text">
-                  <h2 class="examples-title">Проект LAB</h2>
-                  <p class="examples-text">Маркетинг</p>
+                <div class="example__text">
+                  <h2 class="example__title">Проект LAB</h2>
+                  <p class="example__type">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="exampl-el">
-              <a class="example-link" href="#">
+            <li class="examples__element">
+              <a class="example__link" href="#">
                 <div class="thumb">
                   <img
                     class="no-gap"
@@ -283,7 +289,7 @@
                     width="370"
                   />
                   <div class="overlay">
-                    <p class="overlay-text">
+                    <p class="overlay__text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые сервера
@@ -291,9 +297,9 @@
                     </p>
                   </div>
                 </div>
-                <div class="card-text">
-                  <h2 class="examples-title">Growing Business</h2>
-                  <p class="examples-text">Приложение</p>
+                <div class="example__text">
+                  <h2 class="example__title">Growing Business</h2>
+                  <p class="example__type">Приложение</p>
                 </div>
               </a>
             </li>
@@ -303,76 +309,74 @@
     </main>
     <!-- FOOTER-->
     <footer class="footer">
-      <div class="footer container">
+      <div class="container container--footer">
         <div class="address-container">
-          <a class="footer-logo link" href="./index.html"
-            ><span>Web</span>Studio</a
+          <a class="logo logo--white" href="./index.html"
+            ><span class="logo__text">Web</span>Studio</a
           >
           <address class="address">
-            <span class="address-item text">
-              г. Киев, пр-т Леси Украинки, 26</span
-            >
-            <ul class="list">
-              <li class="address-item">
-                <a class="address-link" href="mailto:info@example.com"
+            <span class="address__text"> г. Киев, пр-т Леси Украинки, 26</span>
+            <ul class="address__list">
+              <li class="address__item">
+                <a class="address__link" href="mailto:info@example.com"
                   >info@example.com</a
                 >
               </li>
-              <li class="address-item">
-                <a class="address-link" href="tel:+380991111111"
+              <li class="address__item">
+                <a class="address__link" href="tel:+380991111111"
                   >+38 099 111 11 11</a
                 >
               </li>
             </ul>
           </address>
         </div>
-        <div class="social-links">
-          <p class="social-text">присоединяйтесь</p>
-          <ul class="social-networks list">
-            <li class="network-item list-item">
-              <a class="network-link" href="#">
-                <svg class="network-icon" width="20" height="20">
+        <div class="network">
+          <p class="network__text">присоединяйтесь</p>
+          <ul class="network__list network__list--footer">
+            <li class="network__item">
+              <a class="network__link network__link--white" href="#">
+                <svg class="network__icon" width="20" height="20">
                   <use href="./img/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="network-item list-item">
-              <a class="network-link" href="#">
-                <svg class="network-icon" width="20" height="20">
+            <li class="network__item">
+              <a class="network__link network__link--white" href="#">
+                <svg class="network__icon" width="20" height="20">
                   <use href="./img/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="network-item list-item">
-              <a class="network-link" href="#">
-                <svg class="network-icon" width="20" height="20">
+            <li class="network__item">
+              <a class="network__link network__link--white" href="#">
+                <svg class="network__icon" width="20" height="20">
                   <use href="./img/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="network-item list-item">
-              <a class="network-link" href="#">
-                <svg class="network-icon" width="20" height="20">
+            <li class="network__item">
+              <a class="network__link network__link--white" href="#">
+                <svg class="network__icon" width="20" height="20">
                   <use href="./img/sprite.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </div>
-        <div class="mailing-container">
-          <p class="mailing-text">Подпишитесь на рассылку</p>
-          <form class="mailing-form">
-            <label class="mailing-label">
+        <div class="subscribe">
+          <p class="subscribe__text">Подпишитесь на рассылку</p>
+          <form class="subscribe__form">
+            <label class="subscribe__label">
               <input
-                class="mailing-input"
+                class="subscribe__input"
                 type="email"
                 name="email"
                 placeholder="E-mail"
               />
             </label>
-            <button class="subscribe-btn" type="submit">
+            <button class="subscribe__btn" type="submit">
               Подписаться
-              <svg class="send-icon" width="24" height="24">
+              <svg class="subscribe__icon" width="24" height="24">
                 <use href="./img/sprite.svg#icon-send"></use>
               </svg>
             </button>
